[package]
name = "wrenfold-traits"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["Gareth <gcross.code@icloud.com>"]
description = "Runtime traits for the wrenfold symbolic code-generation library."
keywords = ["symbolic", "code-generation", "robotics", "vision"]
categories = ["science::robotics", "computer-vision", "mathematics"]
publish = false

[dependencies]
nalgebra = { version = "0.32.3", optional = true }

[features]
nalgebra = ["dep:nalgebra"]
