[package]
name = "bspline_demo"
version.workspace = true
edition = "2021"
publish = false
description = "Web app to visualize b-splines."
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["wgpu"]

# Turn on egui wgpu, and enable the wgpu dependency.
wgpu = ["eframe/wgpu", "dep:wgpu"]

[dependencies]
bspline_rust_test = { workspace = true }

# External dependencies.
colorgrad = { version = "0.6.2", default-features = false  }
eframe = { version = "0.26", default-features = false, features = [
  "web_screen_reader",
] }
egui = { version = "0.26", features = [
  "callstack",
  "default",
  "extra_debug_asserts",
  "log",
] }
egui_extras = { version = "0.26", features = ["default", "image"] }
egui_plot = { version = "0.26", features = ["default"] }
log = { version = "0.4", features = ["std"] }
nalgebra = { workspace = true }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
wgpu = { workspace = "0.19", default-features = false, features = ["webgl"], optional = true }
