[package]
name = "bspline_demo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "App to visualize generated b-spline functions."

[features]
default = ["glow"]

glow = ["eframe/glow"]
wayland = ["eframe/wayland"]

[dependencies]
bspline_rust_test = { workspace = true }
wrenfold-traits = { workspace = true }

# External dependencies.
arrayvec = { version = "0.7.4 "}
colorgrad = { version = "0.6.2", default-features = false  }
eframe = { version = "0.26", default-features = false }
egui = { version = "0.26", features = [
  "callstack",
  "default",
  "extra_debug_asserts",
  "log",
] }
egui_extras = { version = "0.26", features = ["default", "image"] }
egui_plot = { version = "0.26", features = ["default"] }
log = { version = "0.4", features = ["std"] }
nalgebra = { workspace = true }
