[package]
name = "bspline_demo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "App to visualize generated b-spline functions."

[dependencies]
bspline_rust_test = { workspace = true }
wrenfold-traits = { workspace = true }

# External dependencies.
arrayvec = { workspace = true }
colorgrad = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
