[package]
name = "cart_pole_demo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "App to visualize cart-pole double pendulum system."

[features]
default = ["glow"]

glow = ["eframe/glow"]
wayland = ["eframe/wayland"]

[dependencies]
wrenfold-traits = { workspace = true }

# External dependencies.
arrayvec = { workspace = true }
colorgrad = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
emath = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
