[package]
name = "motion_planning"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrenfold-traits = { workspace = true }
nalgebra = { workspace = true, features = ["serde", "serde-serialize"] }
serde = { workspace = true, features = ["derive"] }
argmin = { version = "0.8" }
argmin-math = { version = "0.3", features = [
  "ndarray_latest-serde",
  "nalgebra_latest-serde",
] }
ndarray = { version = "0.15.0" }

[build-dependencies]
pkg-config = { workspace = true }
